Test new loom JDK version