@@ -31,14 +31,12 @@
 			<artifactId>netty-codec-http</artifactId>
 			<version>${netty.version}</version>
 		</dependency>
-		<!-- 
 		<dependency>
-			<groupId>io.netty</groupId>
-			<artifactId>netty-transport-native-epoll</artifactId>
-			<version>${netty.version}</version>
-			<optional>true</optional>
+			<groupId>io.netty.incubator</groupId>
+			<artifactId>netty-incubator-transport-native-io_uring</artifactId>
+			<version>0.0.10.Final-SNAPSHOT</version>
+			<classifier>linux-x86_64</classifier>
 		</dependency>
-		 -->
 		<!-- Test dependencies -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -56,9 +54,11 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<source>18</source>
-					<target>18</target>
+					<release>18</release>
 					<compilerVersion>18</compilerVersion>
+					<compilerArgs>
+						--enable-preview
+					</compilerArgs>
 				</configuration>
 			</plugin>
 		</plugins>
